<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorApp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xosel.coffeechain.Buy">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="7dp"
                android:text="@string/str_price_text_view"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/price_text_view"
                android:layout_margin="7dp"
                android:textStyle="bold"
                android:textColor="@color/fontColor"
                android:text="20" />

        </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/str_quantity_text_view"
            android:textStyle="bold"
            />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="7dp"
            android:textColor="@color/buttonTextColor"
            android:text="@string/str_decrement_button"
            android:background="@color/buttonColor"
            android:onClick="decrement" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quantity_text_view"
            android:layout_margin="7dp"
            android:textStyle="bold"
            android:textColor="@color/fontColor"
            android:text="0" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="7dp"
            android:textColor="@color/buttonTextColor"
            android:text="@string/str_increment_button"
            android:background="@color/buttonColor"
            android:onClick="increment" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/str_total_text_view"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total_text_view"
            android:layout_margin="7dp"
            android:textStyle="bold"
            android:textColor="@color/fontColor"
            android:text="0" />

    </LinearLayout>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="7dp"
            android:textColor="@color/buttonTextColor"
            android:text="@string/str_buy_button"
            android:background="@color/buttonColor"
            android:onClick="submitOrder" />

    </LinearLayout>

</RelativeLayout>
